.deployments/prod/02_strapi/05_strapi_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sai-cms-service
  namespace: sai-prod
spec:
  selector:
    app: sai-cms
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 1337
  type: ClusterIP
